[package]
name = "crabwebrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
reqwest = {version= "*", features = ["blocking"]}
crabrs = { git = "https://github.com/cshu/crabrs" }

[profile.release]
debug = 1
